--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "test-app",
+  "name": "todo-api",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "start:watch": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "OCTO",
@@ -12,5 +13,8 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
